--- a/src/4charp.csproj
+++ b/src/4charp.csproj
@@ -198,6 +198,7 @@
     <Content Include="Assets\boards\x.png" />
     <Content Include="Assets\boards\y.png" />
     <Content Include="DataModel\SampleData.json" />
+    <None Include="DataModel\boards.json" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\Logo.scale-100.png" />
